# helpa

./: CMakeLists.txt  README.md  main.cc
bench/: CMakeLists.txt  bench_single.cc  utils.hpp
helpa/: common.hpp  config.hpp  core.hpp  data_convert.hpp  dot.hpp  l2.hpp  types.hpp
helpa/platform/arm/: arm_utils.hpp  dot_impl.hpp  l2_impl.hpp
helpa/platform/avx2/: avx2_utils.hpp  dot_impl.hpp  l2_impl.hpp
helpa/platform/avx512/: avx512_utils.hpp  dot_impl.hpp  l2_impl.hpp
helpa/platform/neon/: dot_impl.hpp  l2_impl.hpp
helpa/platform/scalar/: dot_impl.hpp  l2_impl.hpp
helpa/platform/x86/: data_convert.hpp  dot_impl.hpp  l2_impl.hpp  utils.hpp
helpa/ref/: data_convert_ref.hpp  dot_ref.hpp  l2_ref.hpp
